--- a/projeto/listar.css
+++ b/projeto/listar.css
@@ -72,14 +72,14 @@ table{
     border-radius: 8px;
     border-collapse: collapse;
     border: solid 1px black;
-    width: 80%;
+    width: 100%;
     background-color: white;
     text-align: left;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) ;
 }
 
 th, td{
-    padding: 10px;
+    padding: 10px 20px;
     border: solid 1px #ddd;
     text-align: center;
 }
@@ -87,6 +87,7 @@ th, td{
 th{
     background-color: #00cccc;
     color: white;
+    padding: 15px;
 }
 
 table a{
