--- a/projeto/style.css
+++ b/projeto/style.css
@@ -41,6 +41,12 @@ label{
 
 }
 
+.input{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
 .inputs{
     border-radius: 5px;
     border: 0.5px solid black;
